# Python--First

./: .gitignore  requirements.txt
.github/workflows/: python-tests.yml  tests.yml
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: .dockerignore  Dockerfile  README.md  pyproject.toml
homework_03/app-home/: app_w.py
homework_04/: docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: base.html
homework_06/: Dockerfile  app.py  config.py  docker-compose.yaml  requirements.txt  wsgi.py
homework_06/models/: __init__.py  database.py  poem.py
homework_06/templates/: base.html  index.html
homework_06/templates/poems/: add.html  details.html  list.html
homework_06/views/: poems.py
homework_06/views/forms/: poems.py
homework_07/beauty_salon/services_salon/: apps.py  models.py  urls.py  views.py
homework_08/beauty_salon/services_salon/: admin.py
homework_10/: requirements.txt
homework_10/beauty_salon/beauty_salon/: asgi.py  wsgi.py
homework_10/beauty_salon/services_salon/: urls.py  views.py
homework_11/beauty_salon/: .pylintrc
homework_11/beauty_salon/beauty_salon/: settings.py  urls.py
homework_11/beauty_salon/services_salon/: admin.py  apps.py  models.py  urls.py  views.py
project_kkal/: README.md  requirements.txt
project_kkal/calorie_calculator/calorie_calculator/: asgi.py  settings.py  urls.py  wsgi.py
project_kkal/calorie_calculator/ingredients/: admin.py  forms.py  models.py  urls.py  views.py
testing/test_homework_05/: test_app.py
(+26 files in other folders)
